--- a/style.css
+++ b/style.css
@@ -11,13 +11,16 @@ margin: 0;
 padding: 0;
 }
 .btJuego ,.btInicio{
-   width: 200px;
+   min-width: 200px;
+   max-width: 400px;
     margin: 5px;
 }
 .inputText{
-color: rgb(0, 0, 0);
+color: red;
 border: 1px rgb(255, 157, 157) solid;
-width: 200px;
+min-width: 200px;
+   max-width: 400px;
 height: 50px;
+padding: 6px 12px;
 }
 
